fix(gateway): resolve auth routing by removing StripPrefix and aligning security paths
Fixed authentication requests failing with 403/CSRF errors when routed
through
Spring Cloud Gateway.

Root cause:
- Gateway was stripping `/auth` prefix before forwarding requests
- Auth Service security and controllers expected `/auth/**`
- This mismatch caused forbidden access despite correct security config

Changes:
- Removed `StripPrefix=1` from gateway auth-service route
- Preserved `/auth/**` path end-to-end between gateway and auth-service
- Confirmed CSRF is disabled and security rules allow public auth
endpoints
- Verified JWT generation and validation flow remains intact

Result:
- `/auth/register` and `/auth/login` work correctly via gateway (8080)
- Auth service remains clean and gateway-agnostic
- Gateway security and JWT filter behave as expected

This establishes a stable foundation for role-based routing
and downstream service protection.

--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -12,5 +12,6 @@ spring:
           uri: http://localhost:8081
           predicates:
             - Path=/auth/**
-          filters:
-            - StripPrefix=1
+
+jwt:
+  secret: carecircle-auth-secret-key-which-is-at-least-32-bytes-long
