--- a/gateway-service/pom.xml
+++ b/gateway-service/pom.xml
@@ -62,6 +62,29 @@
 	        <scope>runtime</scope>
 	    </dependency>
 	    
+
+
+	    <!-- Spring Cloud Gateway (Reactive) -->
+	    <dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-starter-gateway</artifactId>
+	    </dependency>
+	
+	    <!-- Spring Security (Reactive) -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-security</artifactId>
+	    </dependency>
+	
+	    <!-- Actuator (optional) -->
+	    <dependency>
+	        <groupId>org.springframework.boot</groupId>
+	        <artifactId>spring-boot-starter-actuator</artifactId>
+	    </dependency>
+
+
+
+	    
 	    <dependency>
 	        <groupId>io.jsonwebtoken</groupId>
 	        <artifactId>jjwt-jackson</artifactId>
